// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Environment empty global prisma rc 1`] = `
Array [
  Cluster {
    "baseUrl": "https://eu1.prisma.sh",
    "clusterSecret": undefined,
    "isPrivate": false,
    "local": false,
    "name": "prisma-eu1",
    "out": Output {},
    "shared": true,
    "workspaceSlug": undefined,
  },
  Cluster {
    "baseUrl": "https://us1.prisma.sh",
    "clusterSecret": undefined,
    "isPrivate": false,
    "local": false,
    "name": "prisma-us1",
    "out": Output {},
    "shared": true,
    "workspaceSlug": undefined,
  },
]
`;

exports[`Environment interpolates env vars 1`] = `
Array [
  Cluster {
    "baseUrl": "https://eu1.prisma.sh",
    "clusterSecret": undefined,
    "isPrivate": false,
    "local": false,
    "name": "prisma-eu1",
    "out": Output {},
    "shared": true,
    "workspaceSlug": undefined,
  },
  Cluster {
    "baseUrl": "https://us1.prisma.sh",
    "clusterSecret": undefined,
    "isPrivate": false,
    "local": false,
    "name": "prisma-us1",
    "out": Output {},
    "shared": true,
    "workspaceSlug": undefined,
  },
]
`;

exports[`Environment loads multiple cluster definitions correctly + gives cluster by name 1`] = `
Array [
  Cluster {
    "baseUrl": "https://eu1.prisma.sh",
    "clusterSecret": undefined,
    "isPrivate": false,
    "local": false,
    "name": "prisma-eu1",
    "out": Output {},
    "shared": true,
    "workspaceSlug": undefined,
  },
  Cluster {
    "baseUrl": "https://us1.prisma.sh",
    "clusterSecret": undefined,
    "isPrivate": false,
    "local": false,
    "name": "prisma-us1",
    "out": Output {},
    "shared": true,
    "workspaceSlug": undefined,
  },
]
`;

exports[`Environment loads multiple cluster definitions correctly + gives cluster by name 2`] = `undefined`;

exports[`Environment non-existent global prisma rc 1`] = `
Array [
  Cluster {
    "baseUrl": "https://eu1.prisma.sh",
    "clusterSecret": undefined,
    "isPrivate": false,
    "local": false,
    "name": "prisma-eu1",
    "out": Output {},
    "shared": true,
    "workspaceSlug": undefined,
  },
  Cluster {
    "baseUrl": "https://us1.prisma.sh",
    "clusterSecret": undefined,
    "isPrivate": false,
    "local": false,
    "name": "prisma-us1",
    "out": Output {},
    "shared": true,
    "workspaceSlug": undefined,
  },
]
`;

exports[`Environment persists .prisma correctly 1`] = `
"clusters:
  cluster:
    host: 'http://localhost:60000'
    clusterSecret: ''
"
`;

exports[`Environment persists .prisma correctly 2`] = `
Array [
  Cluster {
    "baseUrl": "https://eu1.prisma.sh",
    "clusterSecret": undefined,
    "isPrivate": false,
    "local": false,
    "name": "prisma-eu1",
    "out": Output {},
    "shared": true,
    "workspaceSlug": undefined,
  },
  Cluster {
    "baseUrl": "https://us1.prisma.sh",
    "clusterSecret": undefined,
    "isPrivate": false,
    "local": false,
    "name": "prisma-us1",
    "out": Output {},
    "shared": true,
    "workspaceSlug": undefined,
  },
  Cluster {
    "baseUrl": "http://localhost:60000",
    "clusterSecret": "",
    "isPrivate": false,
    "local": true,
    "name": "cluster",
    "out": Output {},
    "shared": false,
    "workspaceSlug": undefined,
  },
]
`;

exports[`Environment sets the platform token correctly 1`] = `
Array [
  Cluster {
    "baseUrl": "https://eu1.prisma.sh",
    "clusterSecret": undefined,
    "isPrivate": false,
    "local": false,
    "name": "prisma-eu1",
    "out": Output {},
    "shared": true,
    "workspaceSlug": undefined,
  },
  Cluster {
    "baseUrl": "https://us1.prisma.sh",
    "clusterSecret": undefined,
    "isPrivate": false,
    "local": false,
    "name": "prisma-us1",
    "out": Output {},
    "shared": true,
    "workspaceSlug": undefined,
  },
]
`;
